--- a/package.json
+++ b/package.json
@@ -11,37 +11,48 @@
     "test": "truffle test ./test/flightSurety.js",
     "dapp": "webpack-dev-server --mode development --config webpack.config.dapp.js",
     "dapp:prod": "webpack --mode production  --config webpack.config.dapp.js",
-    "server": "rm -rf ./build/server && webpack --config webpack.config.server.js"
+    "server": "rm -rf ./prod/server && webpack --config webpack.config.server.js"
   },
   "author": "Nik Kalyani <nik@kalyani.com> https://www.kalyani.com",
   "devDependencies": {
+    "@babel/core": "^7.20.7",
+    "@babel/preset-env": "^7.20.2",
+    "@openzeppelin/contracts": "^4.8.1",
+    "@truffle/hdwallet-provider": "^2.1.7",
+    "@webpack-cli/generators": "^3.0.1",
+    "babel-loader": "^9.1.0",
+    "babel-polyfill": "^6.26.0",
+    "css-loader": "^6.7.3",
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "run-script-webpack-plugin": "^0.1.1",
+    "start-server-webpack-plugin": "^2.2.5",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.75.0",
+    "webpack-bundle-analyzer": "^4.8.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1",
+    "webpack-node-externals": "^3.0.0",
+    "workbox-webpack-plugin": "^6.5.4",
     "@babel/cli": "^7.0.0-beta.46",
-    "@babel/core": "^7.0.0-beta.46",
     "@babel/plugin-proposal-class-properties": "^7.0.0-beta.46",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.46",
-    "@babel/preset-env": "^7.0.0-beta.46",
-    "babel-core": "6.26.3",
-    "babel-loader": "8.0.5",
-    "babel-polyfill": "6.26.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
     "bignumber.js": "8.0.2",
-    "css-loader": "^1.0.0",
-    "express": "4.16.4",
+    "express": "4.18.2",
     "file-loader": "3.0.1",
-    "html-loader": "0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "openzeppelin-solidity": "^1.10.0",
-    "start-server-webpack-plugin": "2.2.5",
-    "style-loader": "^0.23.1",
+    "openzeppelin-solidity": "^2.3.0",
     "superstatic": "6.0.3",
-    "truffle": "5.0.2",
+    "truffle": "^5.0.30",
     "truffle-hdwallet-provider": "1.0.2",
-    "web3": "1.0.0-beta.37",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "3.1.14",
-    "webpack-node-externals": "1.7.2"
+    "web3": "^1.2.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "mocha": "^6.2.0",
+    "express": "^4.18.2",
+    "solc": "^0.8.18",
+    "util": "^0.12.5",
+    "web3": "^1.8.1"
+  }
 }
